<resources>
    <string name="app_name">Fridge Code Mobile App v12.0</string>
    <string name="google_login">Please login with Google account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_magic">Click to magic</string>
    <string name="createItemTV">...</string>
    <string name="detail_delete_item">Delete Item</string>
    <string name="detail_barcode">Barcode:</string>
    <string name="detail_expiration_day">Expiration day:</string>
    <string name="detail_brand">Brand:</string>
    <string name="detail_location">Location:</string>
    <string name="detail_number_of_item">Number of item:</string>
    <string name="detail_unit">Unit:</string>

    <string-array name="Location">
        <item>Room</item>
        <item>Fridge</item>
        <item>Chamber</item>
    </string-array>

    <string-array name="Unit">
        <item>Piece</item>
        <item>Kilogram</item>
        <item>Package</item>
        <item>Liter</item>
    </string-array>

</resources>
