<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="#393e46">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/detailItem" >

        <TextView
            android:id="@+id/detailNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="TextView"
            android:textColor="@color/wordLight"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:gravity="center"  />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/barcodeNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/detail_barcode"
                android:textColor="@color/wordLight" />
            <TextView
                android:id="@+id/barcodeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="TextView"
                android:textColor="@color/wordLight"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/expirNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/detail_expiration_day"
                android:textColor="@color/wordLight" />
            <TextView
                android:id="@+id/expirTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="TextView"
                android:textColor="@color/wordLight"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/detailBrandNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/detail_brand"
                android:textColor="@color/wordLight" />
            <TextView
                android:id="@+id/detailBrandTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="TextView"
                android:textColor="@color/wordLight"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/locationNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/detail_location"
                android:textColor="@color/wordLight" />
            <TextView
                android:id="@+id/locationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="TextView"
                android:textColor="@color/wordLight"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/numOfItemNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/detail_number_of_item"
                android:textColor="@color/wordLight" />
            <TextView
                android:id="@+id/numOfItemTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="TextView"
                android:textColor="@color/wordLight"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/unitNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/detail_unit"
                android:textColor="@color/wordLight" />
            <TextView
                android:id="@+id/unitTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="TextView"
                android:textColor="@color/wordLight"
                android:gravity="left" />
        </TableRow>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/delItemDetailBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:gravity="center"
            android:text="@string/detail_delete_item"
            android:textColor="@android:color/white" />
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>